--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 		$.ajax({
 			type: 'GET',
 			dataType: "json",
-			url: '/info',
+			url: '/aaa',
 			success: function(res) {
 				console.log(res)
 			}
