--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 				dataType: "json",
 				url: '/user/login',
 				data: {
-					name: $('#name').val(),
+					username: $('#name').val(),
 					password: $('#pwd').val()
 				},
 				success: function() {
